Higher res icons (#107)
* changed assigned to flag icon to tag icon

* setup card design according to figma

* uncommented create plan form

* minimal create plan form styling

* added responsiveness

* removed old pngs

--- a/src/app/pages/feature/manage/feature-plans/feature-plans.page.html
+++ b/src/app/pages/feature/manage/feature-plans/feature-plans.page.html
@@ -19,7 +19,7 @@
       <ion-col size-xs="12" size-sm="6">
         <ion-card class="category-card" mode="md" (click)="planPage = 'create'">
           <ion-card-content>
-            <img src="assets/img/create-plan.png" alt="Create Plan Icon">
+            <img src="assets/icon/create.svg" alt="Create Plan Icon">
             <br>
             <strong>Create your own plan</strong>
           </ion-card-content>
@@ -28,7 +28,7 @@
       <ion-col size-xs="12" size-sm="6">
         <ion-card class="category-card" mode="md" (click)="chooseFromMarketplace()">
           <ion-card-content>
-            <img src="assets/img/select-template.png" alt="Select Template Icon">
+            <img src="assets/icon/template.svg" alt="Select Template Icon">
             <br>
             <strong>Select from available templates</strong>
           </ion-card-content>
