--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
@@ -33,67 +33,65 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid *ngIf="step === 0" class="full-height">
-    <ion-row class="full-height grid-row ion-align-items-center">
-      <ion-grid>
-        <ion-row>
-          <ion-label class="ion-margin-start">Choose One:</ion-label>
-        </ion-row>
-        <ion-row class="ion-justify-content-start">
-          <ion-col size="auto">
-            <ion-card class="category-card" mode="md" (click)="categoryId = '5e9f46e1c8bf1a622fec69d5'" [ngClass]="{'selected': categoryId === '5e9f46e1c8bf1a622fec69d5'}">
-              <ion-card-header>
-                <ion-card-title>Journey</ion-card-title>
-              </ion-card-header>
-              <ion-card-content>
-                <li>Embark on a Journey of Growth</li>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-          <ion-col size="auto">
-            <ion-card class="category-card" mode="md" (click)="categoryId = '5e9fe372c8bf1a622fec69d8'" [ngClass]="{'selected': categoryId === '5e9fe372c8bf1a622fec69d8'}">
-              <ion-card-header>
-                <ion-card-title>Mentoring</ion-card-title>
-              </ion-card-header>
-              <ion-card-content>
-                <li>Grow with the Guidance from a Mentor</li>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-          <ion-col size="auto">
-            <ion-card class="category-card" mode="md" (click)="categoryId = '5e9fe35cc8bf1a622fec69d7'" [ngClass]="{'selected': categoryId === '5e9fe35cc8bf1a622fec69d7'}">
-              <ion-card-header>
-                <ion-card-title>Group</ion-card-title>
-              </ion-card-header>
-              <ion-card-content>
-                <li>Learn and Grow with a Group</li>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-          <ion-col size="auto">
-            <ion-card class="category-card" mode="md" (click)="categoryId = '5c915475e172e4e64590e348'" [ngClass]="{'selected': categoryId === '5c915475e172e4e64590e348'}">
-              <ion-card-header>
-                <ion-card-title>Program</ion-card-title>
-              </ion-card-header>
-              <ion-card-content>
-                <li>Manages Journeys, Mentors, and Groups</li>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-          <ion-col size="auto">
-            <ion-card class="category-card" mode="md" (click)="categoryId = '5c915324e172e4e64590e346'" [ngClass]="{'selected': categoryId === '5c915324e172e4e64590e346'}">
-              <ion-card-header>
-                <ion-card-title>Community</ion-card-title>
-              </ion-card-header>
-              <ion-card-content>
-                <li>Manages Users, Account, and Billing</li>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-row>
-  </ion-grid>
+  <ion-row class="ion-align-items-center ion-padding-vertical" [ngClass]="{'full-height': platform.width() >= 768 }" *ngIf="step === 0">
+    <ion-grid>
+      <ion-row>
+        <ion-label class="ion-margin-start">Choose One:</ion-label>
+      </ion-row>
+      <ion-row class="ion-justify-content-start">
+        <ion-col size="auto">
+          <ion-card class="category-card" mode="md" (click)="categoryId = '5e9f46e1c8bf1a622fec69d5'" [ngClass]="{'selected': categoryId === '5e9f46e1c8bf1a622fec69d5'}">
+            <ion-card-header>
+              <ion-card-title>Journey</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <li>Embark on a Journey of Growth</li>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col size="auto">
+          <ion-card class="category-card" mode="md" (click)="categoryId = '5e9fe372c8bf1a622fec69d8'" [ngClass]="{'selected': categoryId === '5e9fe372c8bf1a622fec69d8'}">
+            <ion-card-header>
+              <ion-card-title>Mentoring</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <li>Grow with the Guidance from a Mentor</li>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col size="auto">
+          <ion-card class="category-card" mode="md" (click)="categoryId = '5e9fe35cc8bf1a622fec69d7'" [ngClass]="{'selected': categoryId === '5e9fe35cc8bf1a622fec69d7'}">
+            <ion-card-header>
+              <ion-card-title>Group</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <li>Learn and Grow with a Group</li>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col size="auto">
+          <ion-card class="category-card" mode="md" (click)="categoryId = '5c915475e172e4e64590e348'" [ngClass]="{'selected': categoryId === '5c915475e172e4e64590e348'}">
+            <ion-card-header>
+              <ion-card-title>Program</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <li>Manages Journeys, Mentors, and Groups</li>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col size="auto">
+          <ion-card class="category-card" mode="md" (click)="categoryId = '5c915324e172e4e64590e346'" [ngClass]="{'selected': categoryId === '5c915324e172e4e64590e346'}">
+            <ion-card-header>
+              <ion-card-title>Community</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <li>Manages Users, Account, and Billing</li>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-row>
   <div *ngIf="step === 1">
     <div *ngIf="currentView === 'new'" class="new-section">
         <!--<ion-label class="program-title ion-margin" *ngIf="(categoryId !== '5e17acd47b00ea76b75e5a71') && parent.matrix_string">{{parent.matrix_string[0][0]}}</ion-label>-->
