--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -105,6 +105,7 @@
         <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ionBlur)="momentService.touchContentCalendarItems(null, {operation: 'update calendar item', calendaritem: calendaritem })" [disabled]="!calendaritem._id"></ion-input>
         <!--<span class="moment-input" *ngIf="calendaritem.moment._id">{{calendaritem.title}}</span>-->
         <ion-buttons slot="end" class="ion-no-margin">
+          <ion-button fill="clear" color="grey" (click)="openChildActivity($event, calendaritem.moment, 'edit')" *ngIf="calendaritem.moment.user_list_2 && calendaritem.moment.user_list_2.includes(userData.user._id)"><ion-icon name="cog"></ion-icon></ion-button>
           <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
           <ion-button fill="clear" (click)="removeTimelineItem($event, programId, calendaritem)" class="close-button" *ngIf="calendaritem._id"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
         </ion-buttons>
