--- a/src/app/pages/user/register/register.page.scss
+++ b/src/app/pages/user/register/register.page.scss
@@ -1,4 +1,21 @@
 app-register {
+  // .background{
+  //   background-color: grey;
+
+  // }
+
+  .right-signUp img{
+    height: 100%;
+    width: 100%;
+  }
+
+  .right-signUp {
+    padding-inline-start: 0;
+    padding-inline-end: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    position: relative;
+  }
 
   ion-slides {
     max-width: 600px;
@@ -72,6 +89,10 @@ app-register {
 
   .full-height {
     height: 100%;
+    padding-inline-start: 0;
+    padding-inline-end: 0;
+    padding-top: 0;
+    padding-bottom:0;
   }
 
   .overflow {
@@ -120,8 +141,48 @@ app-register {
 
   .welcome-name {
     font-size: 20px;
-    //color: var(--ion-color-secondary);
+    color: var(--ion-color-primary);
+    font-family: Roboto Black;
+    font-weight: 900;
+    font-size: 48px;
+    line-height: 56px;
     margin: 2% auto 0 auto;
+    letter-spacing: 0.06em;
+  }
+
+  .welcome-title {
+    font-family: Roboto Black;
+    font-size: 48px;
+    //color: var(--ion-color-secondary);
+    font-weight: 900;
+    position: absolute;
+    text-align: center;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-weight:900;
+  }
+
+  .welcome-subtitle {
+    font-size: 20px;
+    //color: var(--ion-color-secondary);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color:white;
+    font-weight:normal;
+    line-height: 36px;
+  }
+
+  .right-signUp #signup-button {
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    border-color: white;
   }
 
   ion-segment {
