--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -7,7 +7,7 @@
   <div *ngIf="view === 'signin'" class="full-height fade-in">
     <ion-grid class="full-height">
       <ion-row class="ion-align-items-center full-height">
-        <ion-col>
+        <ion-col size="7">
           <form [formGroup]="loginForm" class="login-form">
             <ion-list lines="none" class="ion-no-padding">
               <ion-buttons *ngIf="!authService.token" slot="start">
@@ -15,8 +15,8 @@
               </ion-buttons>
               <ion-row>
                 <ion-col>
-                  <img class="login-logo" src="assets/img/icon.png"/>
-                  <div class="welcome-name">Restvo</div>
+                  <!-- <img class="login-logo" src="assets/img/icon.png"/> -->
+                  <div class="welcome-name">Sign in to Restvo</div>
                 </ion-col>
               </ion-row>
               <ion-segment [value]="loginMode" (ionChange)="changeLoginMode($event)">
@@ -50,10 +50,18 @@
             <ion-button expand="block" shape="round" *ngIf="recovery_mode && loginMode === 'email'" (click)="recover()" color="primary">Send Recovery Link</ion-button>
           </form>
           <div style="margin-top: 10px">
-            <ion-button *ngIf="!recovery_mode" (click)="view = 'welcome'" class="create-account" fill="clear">Create an Account</ion-button>
+            <!-- <ion-button *ngIf="!recovery_mode" (click)="view = 'welcome'" class="create-account" fill="clear">Create an Account</ion-button> -->
             <ion-button *ngIf="!recovery_mode" (click)="toggleRecoveryMode()" class="create-account" fill="clear">Forgot my Password</ion-button>
             <ion-button *ngIf="recovery_mode" (click)="toggleRecoveryMode()" class="create-account" fill="clear" expand="full">Back to Login</ion-button>
           </div>
+        </ion-col>
+          
+        <ion-col class="right-signUp">
+          <img class="background-img" src="assets/img/signUp.png"/>
+          <div class="welcome-title">HELLO, Friend!</div>
+          <div class="welcome-subtitle">If you do not join us, please create an account here</div>
+          <ion-button color="white" expand="full" shape="round" fill="outline clear" *ngIf="!recovery_mode" (click)="view = 'welcome'" id="signup-button">Sign up</ion-button>
+          
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -121,6 +129,11 @@
       </ion-row>
     </ion-grid>
   </div>
+
+  <div class="full-height fade-in">
+    <ion-grid class="full-height">
+      <ion-row class="ion-align-items-center full-height">
+        <ion-col size="7">
   <ion-slides [options]="slidesOpts" scrollbar *ngIf="view === 'register'" (ionSlidesDidLoad)="registerSlidesLoaded()">
     <!--First Name-->
     <!--slide index 0-->
@@ -134,8 +147,20 @@
                   <ion-icon name="chevron-back-outline" color="primary"></ion-icon>
                 </ion-button>
               </ion-buttons>
+
+
+              <ion-segment [value]="loginMode" (ionChange)="changeLoginMode($event)">
+                <ion-segment-button value="email">
+                  <ion-label>Email</ion-label>
+                </ion-segment-button>
+                <ion-segment-button value="mobile">
+                  <ion-label>Mobile</ion-label>
+                </ion-segment-button>
+              </ion-segment>
+
               <ion-item lines="full">
                 <ion-input type="text" formControlName="first_name" placeholder="First Name" autocapitalize="true" id="first-name"></ion-input>
+                <ion-input type="text" formControlName="last_name" placeholder="Last Name" autocapitalize="true" id="last-name"></ion-input>
               </ion-item>
               <div *ngIf="!nameForm.controls.first_name.pristine && !nameForm.controls.first_name.valid">
                 <div class="form-error ion-text-wrap"  *ngIf="!nameForm.controls.first_name.pristine && nameForm.controls.first_name.hasError('required')">
@@ -145,9 +170,10 @@
                   First name must have at least 2 characters
                 </div>
               </div>
-              <ion-item lines="full">
+
+              <!-- <ion-item lines="full">
                 <ion-input type="text" formControlName="last_name" placeholder="Last Name" autocapitalize="true" id="last-name"></ion-input>
-              </ion-item>
+              </ion-item> -->
               <div *ngIf="!nameForm.controls.last_name.pristine && !nameForm.controls.last_name.valid">
                 <div class="form-error ion-text-wrap" *ngIf="!nameForm.controls.last_name.pristine && nameForm.controls.last_name.hasError('required')">
                   This is a required field.
@@ -156,14 +182,131 @@
                   Last name must have at least 2 characters
                 </div>
               </div>
+
+              <!-- <ion-item *ngIf="loginMode === 'mobile'" lines="full">
+                <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="calling_code" name="Country Calling Code" value="+1">
+                  <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
+                </ion-select>
+                <ion-input id="phone_number" class="phone_number" type="tel" formControlName="phone_number" placeholder="Mobile Number"></ion-input>
+              </ion-item> -->
+
+           
+              <!-- <ion-item *ngIf="loginMode === 'mobile'" lines="full">
+                <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="mobile_calling_code" name='Country Calling Code'>
+                  <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
+                </ion-select>
+                <ion-input class="phone_number" type="tel" pattern="[0-9]{4,}$" formControlName="mobile_sig_number" placeholder="Mobile Number"></ion-input>
+              </ion-item>
+              <div class="form-error" *ngIf="!mobileForm.controls.mobile_sig_number.pristine && !mobileForm.controls.mobile_sig_number.valid">
+                Invalid mobile number.
+              </div>
+            
+            <div *ngIf="loginMode === 'mobile'" lines="full">
+            <p class="centered">We will send you a SMS message to verify this number. Standard SMS rate applies.</p>
+            <ion-row>
+              <ion-col>
+                <ion-button expand="full" shape="round" color="primary" (click)="registerMobile()" [disabled]="!mobileForm.valid">Send the SMS Code</ion-button>
+              </ion-col>
+            </ion-row>
+            </div> -->
+
+
+            <form [formGroup]="mobileForm" *ngIf="loginMode === 'mobile'" class="form">
+              <ion-list lines="none" >
+                <ion-item lines="full">
+                  <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="mobile_calling_code" name='Country Calling Code'>
+                    <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
+                  </ion-select>
+                  <ion-input class="phone_number" type="tel" pattern="[0-9]{4,}$" formControlName="mobile_sig_number" placeholder="Mobile Number"></ion-input>
+                </ion-item>
+                <div class="form-error" *ngIf="!mobileForm.controls.mobile_sig_number.pristine && !mobileForm.controls.mobile_sig_number.valid">
+                  Invalid mobile number.
+                </div>
+              </ion-list>
+              <p class="centered">We will send you a SMS message to verify this number. Standard SMS rate applies.</p>
+              <ion-row>
+                <ion-col>
+                  <ion-button expand="full" shape="round" color="primary" (click)="registerMobile()" [disabled]="!mobileForm.valid">Send the SMS Code</ion-button>
+                </ion-col>
+              </ion-row>
+              <!-- <ion-row [hidden]="exitType === 'dashboard'">
+                <ion-col>
+                  <ion-button expand="full" fill="clear" (click)="goToSlide(1)" class="ion-text-wrap">Sign me up with email instead</ion-button>
+                </ion-col>
+              </ion-row> -->
+            </form>
+
+
+
+              <ion-item *ngIf="loginMode === 'email'" lines="full">
+                <!-- <ion-input id="email" class="email" type="email" formControlName="email" placeholder="Email" id="email"></ion-input> -->
+                <ion-input #email type="email" formControlName="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z0-9-.]{2,}$" placeholder="Email"></ion-input>
+              </ion-item>
+              
+
+              <!-- <ion-item lines="full">
+                <ion-input #email type="email" formControlName="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z0-9-.]{2,}$" placeholder="Email"></ion-input>
+              </ion-item> -->
+              <div *ngIf="!emailPassForm.controls.email.pristine && !emailPassForm.controls.email.valid">
+                <div class="form-error ion-text-wrap" *ngIf="!emailPassForm.controls.email.pristine && emailPassForm.controls.email.hasError('required')">
+                  This is a required field.
+                </div>
+                <div class="form-error ion-text-wrap"  *ngIf="!emailPassForm.controls.email.pristine && !emailPassForm.controls.email.valid">
+                  Invalid email address.
+                </div>
+              </div>
+              <ion-item *ngIf="loginMode === 'email'" lines="full">
+                <ion-input #password [type]="passwordType" formControlName="password" placeholder="Password"></ion-input>
+                <ion-icon slot="end" [name]="passwordIcon" class="password-icon" (click)='hideShowPassword()'></ion-icon>
+              </ion-item>
+              <div *ngIf="!emailPassForm.controls.password.pristine && !emailPassForm.controls.password.valid">
+                <div class="form-error ion-text-wrap" *ngIf="!emailPassForm.controls.password.pristine && emailPassForm.controls.password.hasError('required')">
+                  This is a required field.
+                </div>
+                <div class="form-error ion-text-wrap" *ngIf="!emailPassForm.controls.password.pristine && emailPassForm.controls.password?.errors?.minlength">
+                  Password must have at least 6 characters
+                </div>
+              </div>
+              <ion-item *ngIf="loginMode === 'email'" lines="full">
+                <ion-input type="password" formControlName="passwordConfirmation" placeholder="Confirm Password"></ion-input>
+              </ion-item>
+              <div *ngIf="!emailPassForm.controls.passwordConfirmation.pristine && (!emailPassForm.controls.passwordConfirmation.valid || emailPassForm.hasError('mismatchedPasswords'))">
+                <div class="form-error ion-text-wrap" *ngIf="!emailPassForm.controls.passwordConfirmation.pristine && emailPassForm.controls.passwordConfirmation.hasError('required')">
+                  This is a required field.
+                </div>
+                <div class="form-error ion-text-wrap" *ngIf="!emailPassForm.controls.passwordConfirmation.pristine && emailPassForm.controls.passwordConfirmation?.errors?.minlength">
+                  Password must have at least 6 characters
+                </div>
+                <div class="form-error ion-text-wrap" *ngIf="!emailPassForm.controls.passwordConfirmation.pristine && emailPassForm.hasError('mismatchedPasswords')">
+                  Passwords do not match
+                </div>
+              </div>
+              <div></div><!--Do not remove! This fixes the white line issue at the bottom-->
+              <p *ngIf="loginMode === 'email'" class="centered" style="text-align: center;">By tapping Next, you agree to our <a href="https://restvo.com/privacy-policy.html" target="_blank">Terms of Service and Privacy Policy</a>.</p>
+
+              <ion-row *ngIf="loginMode === 'email'" >
+                <ion-col>
+                  <ion-button [disabled]="!emailPassForm.valid" expand="full" shape="round" color="primary" (click)="registerEmail()">Create Account</ion-button>
+                </ion-col>
+              </ion-row>
+
+              <ion-row *ngIf="loginMode === 'email'">
+                <ion-col>
+                  <ion-button expand="full" fill="clear" (click)="goToSlide(3)" class="ion-text-wrap">Sign-up via mobile phone instead</ion-button>
+                </ion-col>
+              </ion-row>
+              
+
+
             </ion-list>
-            <p class="centered" style="text-align: center;">By tapping Next, you agree to our <a href="https://restvo.com/privacy-policy.html" target="_blank">Terms of Service and Privacy Policy</a>.</p>
+            <!-- <p class="centered" style="text-align: center;">By tapping Next, you agree to our <a href="https://restvo.com/privacy-policy.html" target="_blank">Terms of Service and Privacy Policy</a>.</p>
             <ion-row>
               <ion-col>
                 <ion-button expand="full" shape="round" color="primary" (click)="nextSlide()" [disabled]="!nameForm.valid" id="submit-name">Next</ion-button>
               </ion-col>
-            </ion-row>
+            </ion-row> -->
           </form>
+        
         </ion-row>
       </ion-grid>
     </ion-slide>
@@ -278,6 +421,7 @@
                   <ion-icon name="chevron-back-outline" color="primary"></ion-icon>
                 </ion-button>
               </ion-buttons>
+              
               <ion-item lines="full">
                 <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="mobile_calling_code" name='Country Calling Code'>
                   <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
@@ -441,4 +585,17 @@
       </ion-grid>
     </ion-slide>
   </ion-slides>
+</ion-col>
+
+<ion-col class="right-signUp">
+  <img class="background-img" src="assets/img/signUp.png"/>
+  <div class="welcome-title">Welcome Back!</div>
+  <div class="welcome-subtitle">If you already have an account, please click here</div>
+  <ion-button color="white" expand="full" shape="round" fill="outline clear" *ngIf="!recovery_mode" (click)="view = 'signin'" id="signup-button">Sign in</ion-button>
+  
+</ion-col>
+
+</ion-row>
+</ion-grid>
+</div>
 </ion-content>
