--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
@@ -26,7 +26,7 @@
   </ion-toolbar>
   <ion-toolbar class="filter" *ngIf="step === 1">
     <ion-segment [(ngModel)]="currentView">
-      <ion-segment-button value="new">New</ion-segment-button>
+      <ion-segment-button value="new">Marketplace</ion-segment-button>
       <ion-segment-button value="recent">Recent</ion-segment-button>
     </ion-segment>
   </ion-toolbar>
