--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -63,8 +63,7 @@
         <ion-col [ngClass]="{'selected': router.url.includes('/profile')}" (click)="clickManageMenu('profile', null)">
           <ion-item class="ion-no-padding" [color]="router.url.includes('/profile') ? 'primary' : 'secondary'" lines="none">
             <ion-icon class="ion-no-margin" slot="start" name="clipboard"></ion-icon>
-            <ion-label class="menu-label" *ngIf="moment && moment.categories && !moment.categories.includes('5c915476e172e4e64590e349')">Profile</ion-label>
-            <ion-label class="menu-label" *ngIf="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">Plan</ion-label>
+            <ion-label class="menu-label">Profile</ion-label>
           </ion-item>
         </ion-col>
         <ion-col [ngClass]="{'selected': router.url.includes('people')}" (click)="clickManageMenu('people', null)">
@@ -121,7 +120,7 @@
             <ion-label class="menu-label">+ Schedule</ion-label>
           </ion-item>
         </ion-col>-->
-        <ion-col [ngClass]="{'selected': router.url.includes('onboarding')}" (click)="clickManageMenu('onboarding', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
+        <ion-col [ngClass]="{'selected': router.url.includes('onboarding')}" (click)="clickManageMenu('onboarding', null)" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
           <ion-item class="ion-no-padding" [color]="router.url.includes('onboarding') ? 'primary' : 'secondary'" lines="none">
             <ion-icon class="ion-no-margin" slot="start" name="list"></ion-icon>
             <ion-label class="menu-label">Onboarding</ion-label>
@@ -164,8 +163,7 @@
     </ion-item>
     <ion-item (click)="clickManageMenu('profile', null)">
       <ion-icon slot="start" name="clipboard" *ngIf="platform.width() < 768"></ion-icon>
-      <ion-label *ngIf="moment && moment.categories && !moment.categories.includes('5c915476e172e4e64590e349')">Profile</ion-label>
-      <ion-label *ngIf="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">Plan</ion-label>
+      <ion-label>Profile</ion-label>
     </ion-item>
     <ion-item (click)="clickManageMenu('people', null)">
       <ion-icon slot="start" name="people" *ngIf="platform.width() < 768"></ion-icon>
@@ -210,7 +208,7 @@
         <ion-label>+ Schedule</ion-label>
       </ion-item>
     </ion-item-group>-->
-    <ion-item (click)="clickManageMenu('onboarding', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
+    <ion-item (click)="clickManageMenu('onboarding', null)" *ngIf="!moment.child_categories.length || (moment.child_categories.length && moment.child_categories.includes('5e17acd47b00ea76b75e5a71'))">
       <ion-icon slot="start" name="list" *ngIf="platform.width() < 768"></ion-icon>
       <ion-label>Onboarding</ion-label>
     </ion-item>
