--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
@@ -7,7 +7,9 @@ app-feature-schedule {
   .moment-label {
     width: 25px;
     height: 25px;
+    margin-top: auto;
     margin-right: 20px;
+    margin-bottom: auto;
   }
 
   .moment-input {
