--- a/src/app/pages/feature/onboardfeature/onboardfeature.page.scss
+++ b/src/app/pages/feature/onboardfeature/onboardfeature.page.scss
@@ -69,7 +69,9 @@ app-onboardfeature {
   .moment-label {
     width: 25px;
     height: 25px;
+    margin-top: auto;
     margin-right: 20px;
+    margin-bottom: auto;
   }
 
   .moment-input {
