--- a/src/app/pages/feature/uploadmedia/uploadmedia.page.scss
+++ b/src/app/pages/feature/uploadmedia/uploadmedia.page.scss
@@ -61,7 +61,9 @@ app-uploadmedia {
   .moment-label {
     width: 25px;
     height: 25px;
+    margin-top: auto;
     margin-right: 20px;
+    margin-bottom: auto;
   }
 
   .option-number {
