upgrade electron to 9.1.0 and dependencies
1.8.15 (1)

--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -32,7 +32,7 @@
         <ion-row class="ion-justify-content-center">
           <ion-label>No Chat Message to Display</ion-label>
         </ion-row>
-        <ion-row class="ion-justify-content-center">
+        <ion-row class="ion-justify-content-center" *ngIf="router.url.includes('(sub:')">
           <ion-button (click)="router.navigate([{ outlets: { sub: null }}])" fill="clear">Close</ion-button>
         </ion-row>
       </div>
